Language switcher + màj des références pour conserver la langue courante

--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -163,7 +163,7 @@
         "promote_txt": "We help promote CEGEP's CS program by organizing activities such as the LAN and by providing information on the subject.",
         "am_i_member": "Am I an ADEPT member ?",
         "am_i_member_txt": "If you are enrolled in a computer science program at Cégep Édouard-Montpetit, you are a member of ADEPT!",
-        "prog": "Programmation (Management CS)",
+        "prog": "Software Programming",
         "network": "IT Network Management",
         "services": "Our services",
         "local": "Our local",
@@ -171,9 +171,9 @@
         "lan": "LAN",
         "lan_txt": "We organize each session a LAN party: a network gaming event that takes place right here at the CEGEP and brings together video game enthusiasts from all over Quebec!",
         "hoodies": "Official Hoodies",
-        "hoodies_txt": "Once every session you'll have the chance to buy an official and awesome hoodie reserved for the members of the program! Plus, it's super comfortable! More details <a href='./hoodies'>here</a>.",
+        "hoodies_txt": "Once every session you'll have the chance to buy an official and awesome hoodie reserved for the members of the program! Plus, it's super comfortable! More details <a href='./hoodies/index.php?lang=en'>here</a>.",
         "fridge": "Fridge and snacks",
-        "fridge_txt": "If you're in a hurry or don't want to wait in line at the cafeteria, that's good because we have a full fridge to help you out! Many <a href='./produits.php'>beverages and snacks</a> are available at low prices!",
+        "fridge_txt": "If you're in a hurry or don't want to wait in line at the cafeteria, that's good because we have a full fridge to help you out! Many <a href='./produits.php?lang=en'>beverages and snacks</a> are available at low prices!",
         "computers": "Computers available",
         "computers_txt": "No labs available? No problem, our computers are equipped with the same software as the department's computers. So you can continue your work without any worries!",
         "discord_server": "Discord server",
