--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -285,7 +285,7 @@
             "image": "Image",
             "article": "Article",
             "price": "Price",
-            "inventory": "Invetory",
+            "inventory": "Inventory",
             "description": "Description",
             "list_intro": "Here is a list of products available at our local(F-041)!",
             "shop_info": "In order to organize events such as the LAN and to improve the layout of our local, the ADEPT offers its members (and all visitors) a self-financing program. We offer you a wide selection of low-cost gourmet snacks and meals that, of course, follow the recommendations of Canada's Food Guide! What's good for you, as a member, is that all the profits go directly back to the association and so in some ways to yourself!"
